[package]
name = "apache_log_security_lib"
version = "0.1.0"
authors = ["Peter Hrvola <peter.hrvola@hotmail.com>"]

[dependencies]
url = "~1.5"

serde = "1.0"
serde_derive = "1.0"
serde_json = "*"
elastic_derive = "*"

lettre = "0.7"

chrono = "0.4"

rayon = "1.0"

nom = "^3.2"

xml-rs = "0.7.0"

glob = "0.2.11"

elastic = "0.20"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "access_log"
harness = false
